src/test/ui/issue-36400.nll.stderr
error[E0596]: cannot borrow immutable item `*x` as mutable
  --> $DIR/issue-36400.rs:15:7
   |
LL |     let x = Box::new(3);
   |         - consider changing this to `mut x`
LL |     f(&mut *x); //~ ERROR cannot borrow immutable
   |       ^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
